# popgis

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  release-plz.toml
.github/workflows/: ci.yml
examples/geojson/: spain.geojson
examples/osmpbf/: monaco-latest.osm.pbf
examples/shapefile/: andalucia.dbf  andalucia.qmd  andalucia.shp  andalucia.shx  small-example.dbf  small-example.qmd  small-example.shx
src/: error.rs  main.rs
src/file_types/: common.rs  geo.rs  geojson.rs  geoparquet.rs  mod.rs  shapefile.rs
src/format/: common.rs  geo.rs  geojson.rs  mod.rs  osmpbf.rs  shapefile.rs
src/pg/: binary_copy.rs  create.rs  crud.rs  mod.rs  ops.rs
src/utils/: cli.rs  geo.rs  mod.rs  shp.rs  validate.rs
