[package]
name = "popgis"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "http://jjcfrancis.co"
readme = "README.md"
repository = "https://github.com/jjcfrancisco/popgis"
description = "A blazing fast way to insert GeoJSON, ShapeFile & OsmPBF into a PostGIS database."
categories = ["science::geo"]

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
shapefile = "0.6.0"
postgres-protocol = "0.6.6"
postgres = { version = "0.19.7", features = ["with-serde_json-1"] }
geo = "0.28.0"
wkb = "0.7.1"
bytes = "1.6.0"
geojson = "0.24.1"
serde_json = "1.0.120"
derive_more = "0.99.18"
proj = "0.27.2"
osmpbf = "0.3.4"
